# ChangeLog for app-emulation/emul-linux-x86-baselibs
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.30 2005/07/30 19:34:09 blubb Exp $

*emul-linux-x86-baselibs-2.2.2 (30 Jul 2005)

  30 Jul 2005; Simon Stelling <blubb@gentoo.org>
  +emul-linux-x86-baselibs-2.2.2.ebuild:
  version bump to fix bug #100795 and other possible breakages

*emul-linux-x86-baselibs-2.2 (29 Jul 2005)

  29 Jul 2005; Simon Stelling <blubb@gentoo.org>
  +emul-linux-x86-baselibs-2.2.ebuild:
  version bump wrt bug #100686

  22 May 2005; Simon Stelling <blubb@gentoo.org>
  emul-linux-x86-baselibs-2.1.1.ebuild:
  stable on amd64

*emul-linux-x86-baselibs-2.1.1 (25 Apr 2005)

  25 Apr 2005; Herbie Hopkins <herbs@gentoo.org>
  +emul-linux-x86-baselibs-2.1.1.ebuild:
  Added libdbus (required by new skype)

  21 Apr 2005; Herbie Hopkins <herbs@gentoo.org>
  files/75emul-linux-x86-base, -emul-linux-x86-baselibs-1.0.ebuild,
  -emul-linux-x86-baselibs-1.1-r3.ebuild,
  -emul-linux-x86-baselibs-1.2.2-r1.ebuild,
  -emul-linux-x86-baselibs-2.0.ebuild, emul-linux-x86-baselibs-2.1.ebuild:
  Switched to using doenvd. Remove old versions.

*emul-linux-x86-baselibs-2.1 (18 Apr 2005)

  18 Apr 2005; Herbie Hopkins <herbs@gentoo.org>
  +emul-linux-x86-baselibs-2.1.ebuild:
  Fixed bug #89245, error loading libncurses.so. Removed unneccasary .a files.
  Fixed SRC_URI.

*emul-linux-x86-baselibs-2.0 (15 Apr 2005)

  15 Apr 2005; Simon Stelling <blubb@gentoo.org>
  +emul-linux-x86-baselibs-2.0.ebuild:
  new version provided by Herbie Hopkins

*emul-linux-x86-baselibs-1.2.3 (21 Mar 2005)

  21 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org>
  +emul-linux-x86-baselibs-1.2.3.ebuild:
  Updated zlib to 1.2.2.  Updated openssl to 0.9.7e-r1.

  17 Jan 2005; Jeremy Huddleston <eradicator@gentoo.org>
  emul-linux-x86-baselibs-1.2.2-r2.ebuild:
  Don't install libsandbox.so if we don't need it.
