@@ -1,0 +1,25 @@
+# Copyright 1999-2005 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/emul-linux-x86-baselibs-2.2.3.ebuild,v 1.1 2005/07/31 21:00:18 blubb Exp $
+
+DESCRIPTION="Base libraries for emulation of 32bit x86 on amd64"
+SRC_URI="mirror://gentoo/emul-linux-x86-baselibs-${PV}.tar.bz2"
+HOMEPAGE="http://www.gentoo.org/"
+
+SLOT="0"
+LICENSE="GPL-2"
+KEYWORDS="-* amd64"
+IUSE=""
+
+S=${WORKDIR}
+
+RDEPEND="virtual/libc
+	app-emulation/emul-linux-x86-glibc
+	app-emulation/emul-linux-x86-compat"
+
+src_install() {
+	cd ${WORKDIR}
+	cp -RPvf ${WORKDIR}/* ${D}/
+
+	doenvd ${FILESDIR}/75emul-linux-x86-base
+}
