@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/emul-linux-x86-baselibs
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.30 2005/07/30 19:34:09 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-baselibs/ChangeLog,v 1.31 2005/07/31 21:00:17 blubb Exp $
+
+*emul-linux-x86-baselibs-2.2.3 (31 Jul 2005)
+
+  31 Jul 2005; Simon Stelling <blubb@gentoo.org>
+  +emul-linux-x86-baselibs-2.2.3.ebuild:
+  another bump to fix bug 100795
 
 *emul-linux-x86-baselibs-2.2.2 (30 Jul 2005)
 
